fixed overflow on mobile

--- a/website/_scss/grid/_grid.scss
+++ b/website/_scss/grid/_grid.scss
@@ -8,7 +8,7 @@ body >* {
     margin: auto;
     padding: 0 20px 0 20px;
     flex: 1 calc(100% - 40px);
-    min-width: 300px;
+    width: 300px;
     max-width: 740px;
 }
 
